// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserAvatar > should render an AvatarImage component with the provided image source 1`] = `
<body>
  <div>
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
    >
      <img
        alt="John Smith"
        class="aspect-square h-full w-full"
        src="https://github.com/shadcn.png"
      />
    </span>
  </div>
</body>
`;

exports[`UserAvatar > should render the fallback 'J' initially 1`] = `
<body>
  <div>
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full bg-muted"
      >
        J
      </span>
    </span>
  </div>
</body>
`;

exports[`UserAvatar > should render the fallback 'JS' initially 1`] = `
<body>
  <div>
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full bg-muted"
      >
        JS
      </span>
    </span>
  </div>
</body>
`;

exports[`UserAvatar > should render the fallback empty string initially 1`] = `
<body>
  <div>
    <span
      class="relative flex shrink-0 overflow-hidden rounded-full h-10 w-10"
    >
      <span
        class="flex h-full w-full items-center justify-center rounded-full bg-muted"
      />
    </span>
  </div>
</body>
`;
